<resources>
    <string name="app_name">Padfoot</string>
    <string name="app_file">PADFOOT</string>

    <!-- BLE strings -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="connected">Tracker connected</string>
    <string name="disconnected">Tracker disconnected</string>
    <string name="connect_tracker">Connect tracker</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_connect">Connect tracker</string>
    <string name="menu_disconnect">Disconnect tracker</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_out">Sign out</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Profile strings -->
    <string name="profile">Profile</string>
    <string name="profile_setup">Create your pet\'s profile</string>
    <string name="profile_pet_name">Pet name</string>
    <string name="profile_pet_name_example">Fido</string>
    <string name="profile_size">Size</string>
    <string name="profile_breed">Breed</string>
    <string name="profile_breed_example">Australian Shepherd</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_step_goal">Step goal</string>
    <string-array name="breeds_array">
        <item>Australian Shepherd</item>
        <item>Border Collie</item>
        <item>Golden Retriever</item>
        <item>Labrador Retriever</item>
    </string-array>

    <!-- Utility strings -->
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="select">Select</string>
    <string name="current_year">2019</string>

    <!-- Main Activity strings -->
    <string name="step_count_header">Today\'s step count</string>
    <string name="hourly_chart_header">Hourly Breakdown</string>
    <string name="weekly_chart_header">Last 7 days</string>
    <string name="step_count_placeholder">--</string>
    <string name="step_count_goal_placeholder">--% to goal</string>
</resources>
